tests/ui/type-alias-impl-trait/impl_trait_for_same_tait.stderr
error[E0119]: conflicting implementations of trait `Bop`
  --> $DIR/impl_trait_for_same_tait.rs:18:1
   |
LL | impl Bop for Bar<()> {}
   | -------------------- first implementation here
...
LL | impl Bop for Bar<i32> {}
   | ^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error[E0119]: conflicting implementations of trait `Bop`
  --> $DIR/impl_trait_for_same_tait.rs:28:1
   |
LL | impl Bop for Bar<()> {}
   | -------------------- first implementation here
...
LL | impl Bop for Barr {}
   | ^^^^^^^^^^^^^^^^^ conflicting implementation

error[E0119]: conflicting implementations of trait `Bop` for type `i32`
  --> $DIR/impl_trait_for_same_tait.rs:32:1
   |
LL | impl Bop for Bar<()> {}
   | -------------------- first implementation here
...
LL | impl Bop for i32 {}
   | ^^^^^^^^^^^^^^^^ conflicting implementation for `i32`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0119`.
